# smartpricing

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  docker-compose.yml  id_ed25519.pub  id_ed25519.pub.pub  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cicd.yml
app/: config.py  main.py
app/api/v1/: auth.py  dependencies.py
app/core/: security.py
app/db/: base.py  session.py
app/models/: base.py  product.py  user.py
app/schemas/: __init__.py  user.py
tests/: conftest.py
tests/unit/: test_api.py
